projet_gl/src/test/deca/context/valid/3_28/3_28_Rvalue_Int.deca
// Description:
//    Programme test si le Rvalue donne un type attendu: Int
//
// Resultats:
//    
//
// Historique:
//    cree le 09/01/2024

{
        int a = 1;
}